--- a/test/vcr_cassettes/funders.yaml
+++ b/test/vcr_cassettes/funders.yaml
@@ -5,24 +5,25 @@ interactions:
       Accept: ['*/*']
       Accept-Encoding: ['gzip, deflate']
       Connection: [keep-alive]
-      User-Agent: [python-requests/2.18.1 habanero/0.3.1]
-      X-USER-AGENT: [python-requests/2.18.1 habanero/0.3.1]
+      User-Agent: [python-requests/2.18.4 habanero/0.6.0.2]
+      X-USER-AGENT: [python-requests/2.18.4 habanero/0.6.0.2]
     method: GET
     uri: https://api.crossref.org/funders?rows=2
   response:
-    body: {string: !!python/unicode '{"status":"ok","message-type":"funder-list","message-version":"1.0.0","message":{"items-per-page":2,"query":{"start-index":0,"search-terms":null},"total-results":14811,"items":[{"id":"501100000314","location":"United
-        Kingdom","name":"ABBEY AWARDS","alt-names":["Abbey"],"uri":"http:\/\/dx.doi.org\/10.13039\/501100000314","replaces":[],"replaced-by":[],"tokens":["abbey","awards","abbey"]},{"id":"501100001316","location":"United
-        Kingdom","name":"University of Kent","alt-names":[],"uri":"http:\/\/dx.doi.org\/10.13039\/501100001316","replaces":[],"replaced-by":[],"tokens":["university","of","kent"]}]}}'}
+    body: {string: '{"status":"ok","message-type":"funder-list","message-version":"1.0.0","message":{"items-per-page":2,"query":{"start-index":0,"search-terms":null},"total-results":16196,"items":[{"id":"100002569","location":"United
+        States","name":"American Association of Endodontists Foundation","alt-names":["AAE
+        Foundation for Endodontics","AAE Foundation","Foundation for Endodontics","AAEF"],"uri":"http:\/\/dx.doi.org\/10.13039\/100002569","replaces":[],"replaced-by":[],"tokens":["american","association","of","endodontists","foundation","aae","foundation","for","endodontics","aae","foundation","foundation","for","endodontics","aaef"]},{"id":"501100009402","location":"Ethiopia","name":"Mekelle
+        University","alt-names":["MU"],"uri":"http:\/\/dx.doi.org\/10.13039\/501100009402","replaces":[],"replaced-by":[],"tokens":["mekelle","university","mu"]}]}}'}
     headers:
-      access-control-allow-headers: [X-Requested-With]
-      access-control-allow-origin: ['*']
-      connection: [close]
-      content-length: ['604']
-      content-type: [application/json;charset=UTF-8]
-      date: ['Fri, 21 Jul 2017 01:45:23 GMT']
-      server: [http-kit]
-      vary: [Accept]
-      x-rate-limit-interval: [1s]
-      x-rate-limit-limit: ['50']
+      Access-Control-Allow-Headers: [X-Requested-With]
+      Access-Control-Allow-Origin: ['*']
+      Connection: [close]
+      Content-Length: ['842']
+      Content-Type: [application/json;charset=UTF-8]
+      Date: ['Mon, 02 Apr 2018 16:21:40 GMT']
+      Server: [http-kit]
+      Vary: [Accept]
+      X-Rate-Limit-Interval: [1s]
+      X-Rate-Limit-Limit: ['50']
     status: {code: 200, message: OK}
 version: 1
