--- a/test/vcr_cassettes/journals_query.yaml
+++ b/test/vcr_cassettes/journals_query.yaml
@@ -5,24 +5,26 @@ interactions:
       Accept: ['*/*']
       Accept-Encoding: ['gzip, deflate']
       Connection: [keep-alive]
-      User-Agent: [python-requests/2.18.1 habanero/0.3.1]
-      X-USER-AGENT: [python-requests/2.18.1 habanero/0.3.1]
+      User-Agent: [python-requests/2.18.4 habanero/0.6.0.2]
+      X-USER-AGENT: [python-requests/2.18.4 habanero/0.6.0.2]
     method: GET
     uri: https://api.crossref.org/journals?query=ecology&rows=2
   response:
-    body: {string: !!python/unicode '{"status":"ok","message-type":"journal-list","message-version":"1.0.0","message":{"items-per-page":2,"query":{"start-index":0,"search-terms":"ecology"},"total-results":173,"items":[{"title":"Journal
-        of Landscape Ecology","publisher":"De Gruyter Open Sp. z o.o. ","ISSN":["1803-2427"],"flags":{"deposits-orcids-current":false,"deposits":true,"deposits-update-policies-backfile":false,"deposits-award-numbers-current":false,"deposits-resource-links-current":false,"deposits-articles":true,"deposits-funders-current":false,"deposits-references-backfile":true,"deposits-licenses-backfile":false,"deposits-award-numbers-backfile":false,"deposits-references-current":false,"deposits-resource-links-backfile":false,"deposits-orcids-backfile":false,"deposits-funders-backfile":false,"deposits-update-policies-current":false,"deposits-licenses-current":false},"coverage":{"funders-backfile":0.0,"licenses-backfile":0.0,"funders-current":0,"resource-links-backfile":0.0,"orcids-backfile":0.0,"update-policies-current":0,"orcids-current":0,"references-backfile":1.0,"award-numbers-backfile":0.0,"update-policies-backfile":0.0,"licenses-current":0,"award-numbers-current":0,"resource-links-current":0,"references-current":0},"breakdowns":{"dois-by-issued-year":[[2011,15],[2010,10],[2008,10],[2009,9],[2012,5]]},"counts":{"total-dois":49,"current-dois":0,"backfile-dois":49},"last-status-check-time":1459490507212},{"title":"Plant
-        Ecology and Evolution","publisher":"Botanical Garden Meise","ISSN":["2032-3921"],"flags":{"deposits-orcids-current":false,"deposits":true,"deposits-update-policies-backfile":false,"deposits-award-numbers-current":false,"deposits-resource-links-current":false,"deposits-articles":true,"deposits-funders-current":false,"deposits-references-backfile":false,"deposits-licenses-backfile":false,"deposits-award-numbers-backfile":false,"deposits-references-current":false,"deposits-resource-links-backfile":false,"deposits-orcids-backfile":false,"deposits-funders-backfile":false,"deposits-update-policies-current":false,"deposits-licenses-current":false},"coverage":{"funders-backfile":0.0,"licenses-backfile":0.0,"funders-current":0.0,"resource-links-backfile":0.0,"orcids-backfile":0.0,"update-policies-current":0.0,"orcids-current":0.0,"references-backfile":0.0,"award-numbers-backfile":0.0,"update-policies-backfile":0.0,"licenses-current":0.0,"award-numbers-current":0.0,"resource-links-current":0.0,"references-current":0.0},"breakdowns":{"dois-by-issued-year":[[2014,55],[2013,43],[2012,43],[2011,43],[2010,42],[2015,40],[2016,15]]},"counts":{"total-dois":281,"current-dois":95,"backfile-dois":186},"last-status-check-time":1459490526783}]}}'}
+    body: {string: '{"status":"ok","message-type":"journal-list","message-version":"1.0.0","message":{"items-per-page":2,"query":{"start-index":0,"search-terms":"ecology"},"total-results":192,"items":[{"last-status-check-time":null,"counts":null,"breakdowns":null,"publisher":"\"Clausius
+        Scientific Press, Inc.\"","coverage":null,"title":"Environment Resource and
+        Ecology Journal","subjects":[],"flags":null,"ISSN":[],"issn-type":[]},{"last-status-check-time":null,"counts":null,"breakdowns":null,"publisher":"New
+        Zealand Ecological Society","coverage":null,"title":"New Zealand Journal of
+        Ecology","subjects":[],"flags":null,"ISSN":[],"issn-type":[]}]}}'}
     headers:
-      access-control-allow-headers: [X-Requested-With]
-      access-control-allow-origin: ['*']
-      connection: [close]
-      content-length: ['2661']
-      content-type: [application/json;charset=UTF-8]
-      date: ['Fri, 21 Jul 2017 01:51:41 GMT']
-      server: [http-kit]
-      vary: [Accept]
-      x-rate-limit-interval: [1s]
-      x-rate-limit-limit: ['50']
+      Access-Control-Allow-Headers: [X-Requested-With]
+      Access-Control-Allow-Origin: ['*']
+      Connection: [close]
+      Content-Length: ['634']
+      Content-Type: [application/json;charset=UTF-8]
+      Date: ['Mon, 02 Apr 2018 16:22:00 GMT']
+      Server: [http-kit]
+      Vary: [Accept]
+      X-Rate-Limit-Interval: [1s]
+      X-Rate-Limit-Limit: ['50']
     status: {code: 200, message: OK}
 version: 1
