--- a/test/vcr_cassettes/prefixes_filter.yaml
+++ b/test/vcr_cassettes/prefixes_filter.yaml
@@ -5,20 +5,22 @@ interactions:
       Accept: ['*/*']
       Accept-Encoding: ['gzip, deflate']
       Connection: [keep-alive]
-      User-Agent: [python-requests/2.18.1 habanero/0.3.1]
-      X-USER-AGENT: [python-requests/2.18.1 habanero/0.3.1]
+      User-Agent: [python-requests/2.18.4 habanero/0.6.0.2]
+      X-USER-AGENT: [python-requests/2.18.4 habanero/0.6.0.2]
     method: GET
     uri: https://api.crossref.org/prefixes?filter=has-full-text%3Atrue
   response:
-    body: {string: !!python/unicode ''}
+    body: {string: '{"status":"error","message-type":"route-not-found","message-version":"1.0.0","message":"Route
+        not found"}'}
     headers:
-      access-control-allow-headers: [X-Requested-With]
-      access-control-allow-origin: ['*']
-      connection: [close]
-      content-length: ['0']
-      date: ['Fri, 21 Jul 2017 01:57:24 GMT']
-      server: [http-kit]
-      x-rate-limit-interval: [1s]
-      x-rate-limit-limit: ['50']
-    status: {code: 200, message: OK}
+      Access-Control-Allow-Headers: [X-Requested-With]
+      Access-Control-Allow-Origin: ['*']
+      Connection: [close]
+      Content-Length: ['105']
+      Content-Type: [application/json]
+      Date: ['Mon, 02 Apr 2018 16:22:45 GMT']
+      Server: [http-kit]
+      X-Rate-Limit-Interval: [1s]
+      X-Rate-Limit-Limit: ['50']
+    status: {code: 404, message: Not Found}
 version: 1
