--- a/test/vcr_cassettes/cn_style.yaml
+++ b/test/vcr_cassettes/cn_style.yaml
@@ -5,22 +5,22 @@ interactions:
       Accept: [text/x-bibliography; style = apa; locale = en-US]
       Accept-Encoding: ['gzip, deflate']
       Connection: [keep-alive]
-      User-Agent: [python-requests/2.18.1 habanero/0.3.1]
-      X-USER-AGENT: [python-requests/2.18.1 habanero/0.3.1]
+      User-Agent: [python-requests/2.18.4 habanero/0.6.0.2]
+      X-USER-AGENT: [python-requests/2.18.4 habanero/0.6.0.2]
     method: GET
     uri: https://doi.org/10.1126/science.169.3946.635
   response:
-    body: {string: !!python/unicode '<html><head><title>Handle Redirect</title></head>
+    body: {string: '<html><head><title>Handle Redirect</title></head>
 
         <body><a href="https://data.crossref.org/10.1126%2Fscience.169.3946.635">https://data.crossref.org/10.1126%2Fscience.169.3946.635</a></body></html>'}
     headers:
-      content-length: ['197']
-      content-type: [text/html;charset=utf-8]
-      date: ['Fri, 21 Jul 2017 01:23:41 GMT']
-      expires: ['Fri, 21 Jul 2017 01:40:56 GMT']
-      location: ['https://data.crossref.org/10.1126%2Fscience.169.3946.635']
-      server: [Apache-Coyote/1.1]
-      vary: [Accept]
+      Content-Length: ['197']
+      Content-Type: [text/html;charset=utf-8]
+      Date: ['Mon, 02 Apr 2018 16:21:26 GMT']
+      Expires: ['Mon, 02 Apr 2018 17:00:15 GMT']
+      Location: ['https://data.crossref.org/10.1126%2Fscience.169.3946.635']
+      Server: [Apache-Coyote/1.1]
+      Vary: [Accept]
     status: {code: 303, message: See Other}
 - request:
     body: null
@@ -28,27 +28,28 @@ interactions:
       Accept: [text/x-bibliography; style = apa; locale = en-US]
       Accept-Encoding: ['gzip, deflate']
       Connection: [keep-alive]
-      User-Agent: [python-requests/2.18.1 habanero/0.3.1]
-      X-USER-AGENT: [python-requests/2.18.1 habanero/0.3.1]
+      User-Agent: [python-requests/2.18.4 habanero/0.6.0.2]
+      X-USER-AGENT: [python-requests/2.18.4 habanero/0.6.0.2]
     method: GET
     uri: https://data.crossref.org/10.1126%2Fscience.169.3946.635
   response:
-    body: {string: "Frank, H. S. (1970). The Structure of Ordinary Water: New data
-        and interpretations are yielding new insights into this fascinating substance.
-        Science, 169(3946), 635\u2013641. doi:10.1126/science.169.3946.635\n"}
+    body: {string: "Frank, H. S. (1970). The Structure of Ordinary Water: New data\
+        \ and interpretations are yielding new insights into this fascinating substance.\
+        \ Science, 169(3946), 635\u2013641. doi:10.1126/science.169.3946.635\n"}
     headers:
-      access-control-allow-headers: ['X-Requested-With, Accept, Accept-Encoding, Accept-Charset,
+      Access-Control-Allow-Headers: ['X-Requested-With, Accept, Accept-Encoding, Accept-Charset,
           Accept-Language, Accept-Ranges, Cache-Control']
-      access-control-allow-origin: ['*']
-      access-control-expose-headers: [Link]
-      connection: [close]
-      content-length: ['206']
-      content-type: [text/x-bibliography]
-      date: ['Fri, 21 Jul 2017 01:23:42 GMT']
-      link: ['<http://dx.doi.org/10.1126/science.169.3946.635>; rel="canonical"']
-      server: [http-kit]
-      x-rate-limit-interval: [1s]
-      x-rate-limit-limit: ['50']
+      Access-Control-Allow-Origin: ['*']
+      Access-Control-Expose-Headers: [Link]
+      Connection: [close]
+      Content-Length: ['206']
+      Content-Type: [text/x-bibliography]
+      Date: ['Mon, 02 Apr 2018 16:21:28 GMT']
+      Link: ['<http://dx.doi.org/10.1126/science.169.3946.635>; rel="canonical", <https://syndication.highwire.org/content/doi/10.1126/science.169.3946.635>;
+          version="vor"; rel="item"']
+      Server: [http-kit]
+      X-Rate-Limit-Interval: [1s]
+      X-Rate-Limit-Limit: ['50']
     status: {code: 200, message: OK}
 - request:
     body: null
@@ -56,22 +57,22 @@ interactions:
       Accept: [text/x-bibliography; style = ieee; locale = en-US]
       Accept-Encoding: ['gzip, deflate']
       Connection: [keep-alive]
-      User-Agent: [python-requests/2.18.1 habanero/0.3.1]
-      X-USER-AGENT: [python-requests/2.18.1 habanero/0.3.1]
+      User-Agent: [python-requests/2.18.4 habanero/0.6.0.2]
+      X-USER-AGENT: [python-requests/2.18.4 habanero/0.6.0.2]
     method: GET
     uri: https://doi.org/10.1126/science.169.3946.635
   response:
-    body: {string: !!python/unicode '<html><head><title>Handle Redirect</title></head>
+    body: {string: '<html><head><title>Handle Redirect</title></head>
 
         <body><a href="https://data.crossref.org/10.1126%2Fscience.169.3946.635">https://data.crossref.org/10.1126%2Fscience.169.3946.635</a></body></html>'}
     headers:
-      content-length: ['197']
-      content-type: [text/html;charset=utf-8]
-      date: ['Fri, 21 Jul 2017 01:23:42 GMT']
-      expires: ['Fri, 21 Jul 2017 01:40:56 GMT']
-      location: ['https://data.crossref.org/10.1126%2Fscience.169.3946.635']
-      server: [Apache-Coyote/1.1]
-      vary: [Accept]
+      Content-Length: ['197']
+      Content-Type: [text/html;charset=utf-8]
+      Date: ['Mon, 02 Apr 2018 16:21:28 GMT']
+      Expires: ['Mon, 02 Apr 2018 16:58:37 GMT']
+      Location: ['https://data.crossref.org/10.1126%2Fscience.169.3946.635']
+      Server: [Apache-Coyote/1.1]
+      Vary: [Accept]
     status: {code: 303, message: See Other}
 - request:
     body: null
@@ -79,26 +80,27 @@ interactions:
       Accept: [text/x-bibliography; style = ieee; locale = en-US]
       Accept-Encoding: ['gzip, deflate']
       Connection: [keep-alive]
-      User-Agent: [python-requests/2.18.1 habanero/0.3.1]
-      X-USER-AGENT: [python-requests/2.18.1 habanero/0.3.1]
+      User-Agent: [python-requests/2.18.4 habanero/0.6.0.2]
+      X-USER-AGENT: [python-requests/2.18.4 habanero/0.6.0.2]
     method: GET
     uri: https://data.crossref.org/10.1126%2Fscience.169.3946.635
   response:
-    body: {string: "[1]H. S. Frank, \u201CThe Structure of Ordinary Water: New data
-        and interpretations are yielding new insights into this fascinating substance,\u201D
-        Science, vol. 169, no. 3946, pp. 635\u2013641, Aug. 1970.\n"}
+    body: {string: "[1]H. S. Frank, \u201CThe Structure of Ordinary Water: New data\
+        \ and interpretations are yielding new insights into this fascinating substance,\u201D\
+        \ Science, vol. 169, no. 3946, pp. 635\u2013641, Aug. 1970.\n"}
     headers:
-      access-control-allow-headers: ['X-Requested-With, Accept, Accept-Encoding, Accept-Charset,
+      Access-Control-Allow-Headers: ['X-Requested-With, Accept, Accept-Encoding, Accept-Charset,
           Accept-Language, Accept-Ranges, Cache-Control']
-      access-control-allow-origin: ['*']
-      access-control-expose-headers: [Link]
-      connection: [close]
-      content-length: ['198']
-      content-type: [text/x-bibliography]
-      date: ['Fri, 21 Jul 2017 01:23:43 GMT']
-      link: ['<http://dx.doi.org/10.1126/science.169.3946.635>; rel="canonical"']
-      server: [http-kit]
-      x-rate-limit-interval: [1s]
-      x-rate-limit-limit: ['50']
+      Access-Control-Allow-Origin: ['*']
+      Access-Control-Expose-Headers: [Link]
+      Connection: [close]
+      Content-Length: ['198']
+      Content-Type: [text/x-bibliography]
+      Date: ['Mon, 02 Apr 2018 16:21:29 GMT']
+      Link: ['<http://dx.doi.org/10.1126/science.169.3946.635>; rel="canonical", <https://syndication.highwire.org/content/doi/10.1126/science.169.3946.635>;
+          version="vor"; rel="item"']
+      Server: [http-kit]
+      X-Rate-Limit-Interval: [1s]
+      X-Rate-Limit-Limit: ['50']
     status: {code: 200, message: OK}
 version: 1
