--- a/test/vcr_cassettes/journals.yaml
+++ b/test/vcr_cassettes/journals.yaml
@@ -5,22 +5,23 @@ interactions:
       Accept: ['*/*']
       Accept-Encoding: ['gzip, deflate']
       Connection: [keep-alive]
-      User-Agent: [python-requests/2.18.1 habanero/0.3.1]
-      X-USER-AGENT: [python-requests/2.18.1 habanero/0.3.1]
+      User-Agent: [python-requests/2.18.4 habanero/0.6.0.2]
+      X-USER-AGENT: [python-requests/2.18.4 habanero/0.6.0.2]
     method: GET
     uri: https://api.crossref.org/journals?rows=1
   response:
-    body: {string: !!python/unicode '{"status":"ok","message-type":"journal-list","message-version":"1.0.0","message":{"items-per-page":1,"query":{"start-index":0,"search-terms":null},"total-results":52135,"items":[{"title":"JNSM","publisher":"JScholar","ISSN":[],"flags":null,"coverage":null,"breakdowns":null,"counts":null,"last-status-check-time":null}]}}'}
+    body: {string: '{"status":"ok","message-type":"journal-list","message-version":"1.0.0","message":{"items-per-page":1,"query":{"start-index":0,"search-terms":null},"total-results":57961,"items":[{"last-status-check-time":null,"counts":null,"breakdowns":null,"publisher":"Innovative
+        Medical Technologies Development Foundation","coverage":null,"title":"36510","subjects":[],"flags":null,"ISSN":[],"issn-type":[]}]}}'}
     headers:
-      access-control-allow-headers: [X-Requested-With]
-      access-control-allow-origin: ['*']
-      connection: [close]
-      content-length: ['321']
-      content-type: [application/json;charset=UTF-8]
-      date: ['Fri, 21 Jul 2017 01:51:40 GMT']
-      server: [http-kit]
-      vary: [Accept]
-      x-rate-limit-interval: [1s]
-      x-rate-limit-limit: ['50']
+      Access-Control-Allow-Headers: [X-Requested-With]
+      Access-Control-Allow-Origin: ['*']
+      Connection: [close]
+      Content-Length: ['397']
+      Content-Type: [application/json;charset=UTF-8]
+      Date: ['Mon, 02 Apr 2018 16:21:59 GMT']
+      Server: [http-kit]
+      Vary: [Accept]
+      X-Rate-Limit-Interval: [1s]
+      X-Rate-Limit-Limit: ['50']
     status: {code: 200, message: OK}
 version: 1
