--- a/test/vcr_cassettes/members_filter.yaml
+++ b/test/vcr_cassettes/members_filter.yaml
@@ -5,25 +5,25 @@ interactions:
       Accept: ['*/*']
       Accept-Encoding: ['gzip, deflate']
       Connection: [keep-alive]
-      User-Agent: [python-requests/2.18.1 habanero/0.3.1]
-      X-USER-AGENT: [python-requests/2.18.1 habanero/0.3.1]
+      User-Agent: [python-requests/2.18.4 habanero/0.6.0.2]
+      X-USER-AGENT: [python-requests/2.18.4 habanero/0.6.0.2]
     method: GET
     uri: https://api.crossref.org/members?filter=has-full-text%3Atrue
   response:
-    body: {string: !!python/unicode '{"status":"failed","message-type":"validation-failure","message":[{"type":"filter-not-available","value":"has-full-text","message":"Filter
+    body: {string: '{"status":"failed","message-type":"validation-failure","message":[{"type":"filter-not-available","value":"has-full-text","message":"Filter
         has-full-text specified but there is no such filter for this route. Valid
-        filters for this route are: prefix, has-public-references, backfile-doi-count,
-        current-doi-count"}]}'}
+        filters for this route are: prefix, has-public-references, reference-visibility,
+        backfile-doi-count, current-doi-count"}]}'}
     headers:
-      access-control-allow-headers: [X-Requested-With]
-      access-control-allow-origin: ['*']
-      connection: [close]
-      content-length: ['313']
-      content-type: [application/json;charset=UTF-8]
-      date: ['Fri, 21 Jul 2017 01:56:24 GMT']
-      server: [http-kit]
-      vary: [Accept]
-      x-rate-limit-interval: [1s]
-      x-rate-limit-limit: ['50']
+      Access-Control-Allow-Headers: [X-Requested-With]
+      Access-Control-Allow-Origin: ['*']
+      Connection: [close]
+      Content-Length: ['335']
+      Content-Type: [application/json;charset=UTF-8]
+      Date: ['Mon, 02 Apr 2018 16:22:38 GMT']
+      Server: [http-kit]
+      Vary: [Accept]
+      X-Rate-Limit-Interval: [1s]
+      X-Rate-Limit-Limit: ['50']
     status: {code: 400, message: Bad Request}
 version: 1
