--- a/test/vcr_cassettes/members_query.yaml
+++ b/test/vcr_cassettes/members_query.yaml
@@ -5,30 +5,30 @@ interactions:
       Accept: ['*/*']
       Accept-Encoding: ['gzip, deflate']
       Connection: [keep-alive]
-      User-Agent: [python-requests/2.18.1 habanero/0.3.1]
-      X-USER-AGENT: [python-requests/2.18.1 habanero/0.3.1]
+      User-Agent: [python-requests/2.18.4 habanero/0.6.0.2]
+      X-USER-AGENT: [python-requests/2.18.4 habanero/0.6.0.2]
     method: GET
     uri: https://api.crossref.org/members?query=ecology&rows=2
   response:
-    body: {string: !!python/unicode '{"status":"ok","message-type":"member-list","message-version":"1.0.0","message":{"items-per-page":2,"query":{"start-index":0,"search-terms":"ecology"},"total-results":18,"items":[{"last-status-check-time":1499317280032,"primary-name":"Japanese
-        Society of Microbial Ecology","counts":{"total-dois":1053,"current-dois":93,"backfile-dois":960},"breakdowns":{"dois-by-issued-year":[[2012,82],[2013,67],[2014,66],[2016,65],[2009,54],[2008,54],[2011,52],[2015,50],[2010,49],[2007,47],[2004,41],[1999,41],[1998,38],[2001,36],[2005,32],[2003,31],[2006,30],[2002,30],[2017,28],[2000,28],[1993,28],[1997,22],[1994,19],[1995,18],[1989,16],[1996,15],[1991,15],[1992,11],[1990,11],[1988,11],[1987,10],[1986,6]]},"prefixes":["10.1264"],"coverage":{"affiliations-current":0.9892473220825195,"funders-backfile":0.0,"licenses-backfile":0.0,"funders-current":0.0,"affiliations-backfile":0.03333333507180214,"resource-links-backfile":0.0,"orcids-backfile":0.0,"update-policies-current":0.0,"orcids-current":0.0,"references-backfile":0.6895833611488342,"award-numbers-backfile":0.0,"update-policies-backfile":0.0,"licenses-current":0.0,"award-numbers-current":0.0,"abstracts-backfile":0.0,"resource-links-current":0.0,"abstracts-current":0.0,"references-current":0.9677419066429138},"prefix":[{"public-references":false,"name":"Japanese
-        Society of Microbial Ecology","value":"10.1264"}],"id":336,"tokens":["japanese","society","of","microbial","ecology"],"flags":{"deposits-abstracts-current":false,"deposits-orcids-current":false,"deposits":true,"deposits-affiliations-backfile":true,"deposits-update-policies-backfile":false,"deposits-award-numbers-current":false,"deposits-resource-links-current":false,"deposits-articles":true,"deposits-affiliations-current":true,"deposits-funders-current":false,"deposits-references-backfile":true,"deposits-abstracts-backfile":false,"deposits-licenses-backfile":false,"deposits-award-numbers-backfile":false,"deposits-references-current":true,"deposits-resource-links-backfile":false,"deposits-orcids-backfile":false,"deposits-funders-backfile":false,"deposits-update-policies-current":false,"deposits-licenses-current":false},"location":"5-3
-        Yonbancho Chiyoda-ku Tokyo 102-0081 Japan","names":["Japanese Society of Microbial
-        Ecology"]},{"last-status-check-time":1499317326681,"primary-name":"Journal
-        of Vector Ecology","counts":{"total-dois":0,"current-dois":0,"backfile-dois":0},"breakdowns":{"dois-by-issued-year":[]},"prefixes":["10.3376"],"coverage":{"affiliations-current":0,"funders-backfile":0,"licenses-backfile":0,"funders-current":0,"affiliations-backfile":0,"resource-links-backfile":0,"orcids-backfile":0,"update-policies-current":0,"orcids-current":0,"references-backfile":0,"award-numbers-backfile":0,"update-policies-backfile":0,"licenses-current":0,"award-numbers-current":0,"abstracts-backfile":0,"resource-links-current":0,"abstracts-current":0,"references-current":0},"prefix":[{"public-references":false,"name":"BioOne
-        (Journal of Vector Ecology)","value":"10.3376"}],"id":1950,"tokens":["journal","of","vector","ecology"],"flags":{"deposits-abstracts-current":false,"deposits-orcids-current":false,"deposits":false,"deposits-affiliations-backfile":false,"deposits-update-policies-backfile":false,"deposits-award-numbers-current":false,"deposits-resource-links-current":false,"deposits-articles":false,"deposits-affiliations-current":false,"deposits-funders-current":false,"deposits-references-backfile":false,"deposits-abstracts-backfile":false,"deposits-licenses-backfile":false,"deposits-award-numbers-backfile":false,"deposits-references-current":false,"deposits-resource-links-backfile":false,"deposits-orcids-backfile":false,"deposits-funders-backfile":false,"deposits-update-policies-current":false,"deposits-licenses-current":false},"location":"Suite
+    body: {string: '{"status":"ok","message-type":"member-list","message-version":"1.0.0","message":{"items-per-page":2,"query":{"start-index":0,"search-terms":"ecology"},"total-results":18,"items":[{"last-status-check-time":1522630997404,"primary-name":"Japanese
+        Society of Microbial Ecology","counts":{"total-dois":1085,"current-dois":75,"backfile-dois":1010},"breakdowns":{"dois-by-issued-year":[[2012,82],[2013,67],[2014,66],[2016,65],[2017,59],[2009,54],[2008,54],[2011,52],[2015,50],[2010,49],[2007,47],[2004,41],[1999,41],[1998,38],[2001,36],[2005,32],[2003,31],[2006,30],[2002,30],[2000,28],[1993,28],[1997,22],[1994,19],[1995,18],[2018,16],[1989,16],[1996,15],[1991,15],[1992,11],[1990,11],[1988,11],[1987,10],[1986,6]]},"prefixes":["10.1264"],"coverage":{"affiliations-current":1.0,"funders-backfile":0.0,"licenses-backfile":0.0,"funders-current":0.0,"affiliations-backfile":0.08217822015285492,"resource-links-backfile":0.05643564462661743,"orcids-backfile":0.0,"update-policies-current":0.0,"orcids-current":0.0,"references-backfile":0.7039604187011719,"award-numbers-backfile":0.0,"update-policies-backfile":0.0,"licenses-current":0.0,"award-numbers-current":0.0,"abstracts-backfile":0.0,"resource-links-current":1.0,"abstracts-current":0.0,"references-current":0.9599999785423279},"prefix":[{"value":"10.1264","name":"Japanese
+        Society of Microbial Ecology","public-references":false,"reference-visibility":"limited"}],"id":336,"tokens":["japanese","society","of","microbial","ecology"],"flags":{"deposits-abstracts-current":false,"deposits-orcids-current":false,"deposits":true,"deposits-affiliations-backfile":true,"deposits-update-policies-backfile":false,"deposits-award-numbers-current":false,"deposits-resource-links-current":true,"deposits-articles":true,"deposits-affiliations-current":true,"deposits-funders-current":false,"deposits-references-backfile":true,"deposits-abstracts-backfile":false,"deposits-licenses-backfile":false,"deposits-award-numbers-backfile":false,"deposits-references-current":true,"deposits-resource-links-backfile":true,"deposits-orcids-backfile":false,"deposits-funders-backfile":false,"deposits-update-policies-current":false,"deposits-licenses-current":false},"location":"New
+        Road Oxford Oxford OX2 1BG United Kingdom","names":["Japanese Society of Microbial
+        Ecology"]},{"last-status-check-time":1522631041874,"primary-name":"Journal
+        of Vector Ecology","counts":{"total-dois":27,"current-dois":0,"backfile-dois":27},"breakdowns":{"dois-by-issued-year":[[2014,27]]},"prefixes":["10.3376"],"coverage":{"affiliations-current":0,"funders-backfile":0.0,"licenses-backfile":0.0,"funders-current":0,"affiliations-backfile":0.0,"resource-links-backfile":0.0,"orcids-backfile":0.0,"update-policies-current":0,"orcids-current":0,"references-backfile":0.0,"award-numbers-backfile":0.0,"update-policies-backfile":0.0,"licenses-current":0,"award-numbers-current":0,"abstracts-backfile":0.0,"resource-links-current":0,"abstracts-current":0,"references-current":0},"prefix":[{"value":"10.3376","name":"BioOne
+        (Journal of Vector Ecology)","public-references":false,"reference-visibility":"limited"}],"id":1950,"tokens":["journal","of","vector","ecology"],"flags":{"deposits-abstracts-current":false,"deposits-orcids-current":false,"deposits":true,"deposits-affiliations-backfile":false,"deposits-update-policies-backfile":false,"deposits-award-numbers-current":false,"deposits-resource-links-current":false,"deposits-articles":true,"deposits-affiliations-current":false,"deposits-funders-current":false,"deposits-references-backfile":false,"deposits-abstracts-backfile":false,"deposits-licenses-backfile":false,"deposits-award-numbers-backfile":false,"deposits-references-current":false,"deposits-resource-links-backfile":false,"deposits-orcids-backfile":false,"deposits-funders-backfile":false,"deposits-update-policies-current":false,"deposits-licenses-current":false},"location":"Suite
         800 21 DuPont Circle 21 DuPont Circle Washington DC 20036 United States","names":["Journal
         of Vector Ecology","BioOne (Journal of Vector Ecology)"]}]}}'}
     headers:
-      access-control-allow-headers: [X-Requested-With]
-      access-control-allow-origin: ['*']
-      connection: [close]
-      content-length: ['3951']
-      content-type: [application/json;charset=UTF-8]
-      date: ['Fri, 21 Jul 2017 01:56:23 GMT']
-      server: [http-kit]
-      vary: [Accept]
-      x-rate-limit-interval: [1s]
-      x-rate-limit-limit: ['50']
+      Access-Control-Allow-Headers: [X-Requested-With]
+      Access-Control-Allow-Origin: ['*']
+      Connection: [close]
+      Content-Length: ['4054']
+      Content-Type: [application/json;charset=UTF-8]
+      Date: ['Mon, 02 Apr 2018 16:22:35 GMT']
+      Server: [http-kit]
+      Vary: [Accept]
+      X-Rate-Limit-Interval: [1s]
+      X-Rate-Limit-Limit: ['50']
     status: {code: 200, message: OK}
 version: 1
